Fix title on iphones in vertical view

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -32,22 +32,11 @@
 @media (max-width: 480px) {
   .hero-unit h1 {
     text-align: center;
+    font-size: 42px;
   }
 
   #bio p {
     padding-bottom: 20px;
-  }
-}
-
-@media only screen and (max-width: 320px) {
-  h1 {
-    font-size: 42px;
-  }
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
-  h1 {
-    font-size: 42px;
   }
 }
 
